<resources>
    <string name="app_name">Layouts</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_email">Email</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_aniversario">Aniversário</string>
    <string name="hint_calendario">Data Calendário</string>
    <string-array name="siglas_estados_brasil">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>