<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFormularioConstraint">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/editNome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/editEndereco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_endereco"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/editNome"
                app:layout_constraintStart_toStartOf="@id/editNome"
                app:layout_constraintTop_toBottomOf="@+id/editNome" />

            <EditText
                android:id="@+id/editCidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_dialog_map"
                android:hint="@string/hint_cidade"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/editEndereco"
                app:layout_constraintStart_toStartOf="@id/editEndereco"
                app:layout_constraintTop_toBottomOf="@+id/editEndereco" />

            <EditText
                android:id="@+id/editEmails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_dialog_email"
                android:hint="@string/hint_email"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/editCidade"
                app:layout_constraintStart_toStartOf="@id/editCidade"
                app:layout_constraintTop_toBottomOf="@id/editCidade" />

            <EditText
                android:id="@+id/editTelefone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_call"
                android:hint="@string/hint_telefone"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/editEmails"
                app:layout_constraintStart_toStartOf="@id/editEmails"
                app:layout_constraintTop_toBottomOf="@id/editEmails" />

            <Spinner
                android:id="@+id/spinnerEstados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/siglas_estados_brasil"
                app:layout_constraintEnd_toStartOf="@id/editCep"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@id/editTelefone"
                app:layout_constraintTop_toBottomOf="@id/editTelefone" />

            <EditText
                android:id="@+id/editCep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_cep"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/editTelefone"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/spinnerEstados"
                app:layout_constraintTop_toBottomOf="@id/editTelefone" />

            <EditText
                android:id="@+id/editAniversario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:hint="@string/hint_calendario"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerEstados" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@id/editAniversario"
                app:layout_constraintStart_toStartOf="@id/editAniversario"
                app:layout_constraintTop_toBottomOf="@id/editAniversario"
                app:srcCompat="@android:drawable/btn_star_big_on" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
